--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body> 
     <main>
         <header>
-            <h1>Working with Cascade</h1>
+            <h1>Jasmines To Do list</h1>
         </header>
         
         <article id="todo">
