added-background-image

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
     <link rel="stylesheet" href="css/main.css">
 
-    <title>.: Working with CSS :.</title>
+    <title>.: To Do List :.</title>
+    
 </head>
 <body> 
-    <main>
+     <main>
         <header>
-            <h1>Jasmines To Do list</h1>
+            <h1>Jasmines To Do list </h1>
         </header>
         
         <article id="todo">
@@ -35,7 +36,7 @@
                 <li>item 2</li>
                 <li>item 3</li>
                 <li>item 4</li>
-                <li>item 5</li>
+                <li>item 5</li> 
                 <li>item 6</li>
             </ul>
         </article>
