--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body> 
      <main>
         <header>
-            <h1>Jasmines To Do list </h1>
+            <h1 id="heading">Jasmines To Do list </h1>
         </header>
         
         <article id="todo">
