--- a/index.html
+++ b/index.html
@@ -19,37 +19,37 @@
         <article id="todo">
             <h2>To Dos</h2>
 
-            <ul class="todo">
-                <li>item 1</li>
-                <li>item 2</li>
-                <li>item 3</li>
-                <li>item 4</li>
-                <li>item 5</li>
-                <li>item 6</li>
+            <ul class="todo">  
+                <li><input type="checkbox" id="todocheck1">item 1</li>
+                <li><input type="checkbox" id="todocheck2">item 2</li>
+                <li><input type="checkbox" id="todocheck3">item 3</li>
+                <li><input type="checkbox" id="todocheck4">item 4</li>
+                <li><input type="checkbox" id="todocheck5">item 5</li>
+                <li><input type="checkbox" id="todocheck6">item 6</li>
             </ul>
         </article>
 
         <article id="inprogress">
             <h2>In Progress</h2>
             <ul class="inprogress">
-                <li>item 1</li>
-                <li>item 2</li>
-                <li>item 3</li>
-                <li>item 4</li>
-                <li>item 5</li> 
-                <li>item 6</li>
+                <li><input type="checkbox" id="progresscheck1">item 1</li>
+                <li><input type="checkbox" id="progresscheck2">item 2</li>
+                <li><input type="checkbox" id="progresscheck3">item 3</li>
+                <li><input type="checkbox" id="progresscheck4">item 4</li>
+                <li><input type="checkbox" id="progresscheck5">item 5</li>
+                <li><input type="checkbox" id="progresscheck6">item 6</li>
             </ul>
         </article>
 
         <article id="done">
             <h2>Done</h2>
             <ul class="done">
-                <li>item 1</li>
-                <li>item 2</li>
-                <li>item 3</li>
-                <li>item 4</li>
-                <li>item 5</li>
-                <li>item 6</li>
+                <li><input type="checkbox" id="donecheck1">item 1</li>
+                <li><input type="checkbox" id="donecheck2">item 2</li>
+                <li><input type="checkbox" id="donecheck3">item 3</li>
+                <li><input type="checkbox" id="donecheck4">item 4</li>
+                <li><input type="checkbox" id="donecheck5">item 5</li>
+                <li><input type="checkbox" id="donecheck6">item 6</li>
             </ul>
         </article>
     </main>
